<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_doc_practice"
            android:icon="@drawable/ic_letter_p"
            android:title="@string/text_drawer_practice"/>
        <item
            android:id="@+id/nav_doc_theory"
            android:icon="@drawable/ic_letter_t"
            android:title="@string/text_drawer_theory"/>
    </group>

    <item android:title="@string/text_drawer_information">
        <menu>
            <item
                android:id="@+id/nav_info_teacher"
                android:icon="@drawable/ic_person_black"
                android:title="@string/text_drawer_info_teacher" />
            <item
                android:id="@+id/nav_info_course"
                android:icon="@drawable/ic_school_black"
                android:title="@string/text_drawer_info_course" />
        </menu>
    </item>

</menu>
