<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true">
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:showIn="bottom_navigation_view">-->

    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_play_arrow"
        android:title="@string/text_bottom_menu_videos" />
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_schedules"
        android:enabled="true"
        android:icon="@drawable/ic_attach_file"
        android:title="@string/text_bottom_menu_documents" />
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_music"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/text_bottom_menu_notes" />
        <!--app:showAsAction="ifRoom" />-->
</menu>